Shoreditch: Update woocommerce-rtl.css. Fix My Account buttons spacing issue. See #28.

--- a/shoreditch/woocommerce-rtl.css
+++ b/shoreditch/woocommerce-rtl.css
@@ -497,6 +497,13 @@ ul.products li.product {
   font-family: Genericons;
   vertical-align: bottom;
   margin-right: .5rem; }
+  
+.woocommerce-account .woocommerce-MyAccount-content table .button {
+	word-wrap: normal;
+	word-break: normal;
+	display: inline-block;
+	margin: .3em;
+}
 
 @media screen and (min-width: 768px) {
   .woocommerce-account .entry-content .woocommerce:before, .woocommerce-account .entry-content .woocommerce:after {
